--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -115,12 +115,16 @@ td {
 }
 
 .hop {
+  float: left;
+  height: 600px;
   display: flex;
   flex-wrap: wrap;
 }
 
 .img-product {
-  width: 90%;
+  width: 100%;
+  /* height: 20px;
+  width: 20px; */
 }
 
 .label {
